# dendro

./: .gitignore  README.md  index.html  package.json  vite.config.ts
python/: README.md  pyproject.toml  setup.py
python/dendro/: cli.py
python/dendro/client/: __init__.py  submit_job.py
python/dendro/common/: DendroJob.py  api_requests.py  dendro_types.py
python/dendro/compute_client/: ComputeClientDaemon.py  JobManager.py  PubsubClient.py  _start_job.py  register_compute_client.py  run_pending_job.py  start_compute_client.py
python/dendro/internal_job_monitoring/: console_output_monitor.py  resource_utilization_monitor.py
python/dendro/sdk/: App.py  AppProcessor.py  InputFile.py  OutputFile.py  __init__.py  _make_spec_file.py  _run_job_child_process.py  _run_job_parent_process.py  resolve_dandi_url.py
python/pairio/: cli.py
python/pairio/client/: __init__.py  submit_job.py
python/pairio/common/: PairioJob.py  api_requests.py  pairio_types.py
python/pairio/compute_client/: ComputeClientDaemon.py  JobManager.py  PubsubClient.py  _start_job.py  register_compute_client.py  start_compute_client.py
python/pairio/internal_job_monitoring/: console_output_monitor.py  job_status_monitor.py  resource_utilization_monitor.py
python/pairio/sdk/: App.py  AppProcessor.py  InputFile.py  OutputFile.py  ProcessorBase.py  _load_spec_from_uri.py  _run_job_child_process.py  _run_job_parent_process.py  upload_additional_job_output.py
python/src/dendro/: __init__.py
python/src/dendro/client/: __init__.py  submit_job.py
python/src/dendro/common/: DendroJob.py  (+2 more)
(+189 files in other folders)
